# Jiuzhao

./: README.md  models.json  pyproject.toml
jiuzhao/: config.py  main.py
jiuzhao/core/: agent.py  llm.py
jiuzhao/tools/: base.py  file_system.py  impl.py  lean.py  registry.py  search.py
jiuzhao/tools/markdown/: file_system.md  lean_compiler.md
jiuzhao/utils/: ui.py
